fix vert scrollbar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+html {
+  height: 100%;
+}
 body {
   background-color: #f2f2f2;
   color: #333366;
   font-family: "Garamond", serif;
+  height: 100vh;
+  margin: 0;
 }
 
 .container {
@@ -44,16 +49,16 @@ body {
   font: 14px Garamond, serif;
   /* width: 40vw; */
   display: flex;
-
   text-align: left;
-  position: absolute;
+  height: 30px;
+  position: fixed;
   bottom: 10px;
   left: 10px;
 }
 
 button {
   background-color: white;
-  position: absolute;
+  position: fixed;
   bottom: 5px;
   right: 5px;
   border: 0px;
@@ -68,11 +73,6 @@ button {
   opacity: 0.5;
 }
 
-footer {
-  /* display: flex;
-  justify-content: flex-end;  */
-}
-
 @media screen and (max-width: 600px) {
   .mainlogo,
   .haley {
@@ -82,6 +82,7 @@ footer {
   }
   #mc_embed_signup {
     width: 50vw;
+    height: 30px;
   }
   .required-email,
   .submit-button {
